# src/main/kotlin/com/integracion/stock/controller/product/ProductCategoryRoute.kt
@@ -1,10 +1,13 @@
 package com.integracion.com.integracion.stock.controller.product
 
+import com.integracion.com.integracion.stock.core.common.DataError
 import com.integracion.com.integracion.stock.core.common.onEmpty
 import com.integracion.com.integracion.stock.core.common.onError
 import com.integracion.com.integracion.stock.core.common.onSuccess
+import com.integracion.com.integracion.stock.domain.product.ProductCategory
 import com.integracion.com.integracion.stock.domain.product.ProductCategoryRepository
 import com.integracion.com.integracion.stock.service.product.ProductCategoryDto
+import com.integracion.com.integracion.stock.service.product.ProductCategoryUpdateDto
 import io.ktor.http.*
 import io.ktor.server.application.*
 import io.ktor.server.request.*
@@ -31,7 +34,10 @@ fun Application.productCategoryRoute() {
             }
 
             get("/{id}") {
-                val id = call.pathParameters["id"]?.toIntOrNull() ?: return@get call.respond(HttpStatusCode.BadRequest, "Invalid id")
+                val id = call.pathParameters["id"]?.toIntOrNull() ?: return@get call.respond(
+                    HttpStatusCode.BadRequest,
+                    "Invalid id"
+                )
 
                 productCategoryRepository.getProductCategoryById(id)
                     .onSuccess {
@@ -57,7 +63,34 @@ fun Application.productCategoryRoute() {
                         call.respond(it)
                     }
                     .onError {
-                        call.respond(HttpStatusCode.InternalServerError)
+                        if (it == DataError.Remote.LOGICAL) {
+                            call.respond(HttpStatusCode.BadRequest)
+                        } else {
+                            call.respond(HttpStatusCode.InternalServerError)
+                        }
+                    }
+                    .onEmpty {
+                        call.respond(HttpStatusCode.NotFound)
+                    }
+            }
+
+            put {
+                val category = try {
+                    call.receive<ProductCategory>()
+                } catch (e: ContentTransformationException) {
+                    return@put call.respond(HttpStatusCode.BadRequest, "Malformed category")
+                }
+
+                productCategoryRepository.updateProductCategory(category)
+                    .onSuccess {
+                        call.respond(it)
+                    }
+                    .onError {
+                        if (it == DataError.Remote.LOGICAL) {
+                            call.respond(HttpStatusCode.BadRequest)
+                        } else {
+                            call.respond(HttpStatusCode.InternalServerError)
+                        }
                     }
                     .onEmpty {
                         call.respond(HttpStatusCode.NotFound)
